--- a/electron-starter/electron/index.html
+++ b/electron-starter/electron/index.html
@@ -1,10 +1,49 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="UTF-8">
+    <title>WebSocket Electron</title>
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="default-src 'self' ws://localhost:8080; script-src 'self' 'unsafe-inline'"
+    />
+  </head>
+  <body>
+    <h1>WebSocket Test</h1>
+    <button id="connect">Connecter WebSocket</button>
+    <br />
+    <input type="text" id="result" placeholder="Résultat WebSocket" />
+    <script>
+      let ws
+      document.getElementById('connect').addEventListener('click', () => {
+        console.log('00000000001:frontend')
+        ws = new WebSocket('ws://localhost:8080')
+        ws.onopen = () => {
+          console.log('WebSocket ouvert')
+          ws.send('hello serveur depuis le clic')
+        }
+        ws.onmessage = (event) => {
+          console.log(`serveur dit: ${event.data}`)
+          document.getElementById('result').value = event.data
+        }
+        ws.onerror = (err) => {
+          console.error(`erreur: ${err.message}`)
+        }
+        ws.onclose = () => {
+          console.log('WebSocket fermé')
+        }
+      })
+    </script>
+  </body>
+</html>
+
+
+<!-- <!DOCTYPE html>
+<html>
 
 <head>
   <meta charset="UTF-8">
   <title>WebSocket Electron</title>
-  <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self' ws://localhost:8080" /> -->
   <meta http-equiv="Content-Security-Policy"
     content="default-src 'self' ws://localhost:8080; script-src 'self' 'unsafe-inline'" />
 </head>
@@ -15,6 +54,7 @@
   <script>
     let ws
     document.getElementById('connect').addEventListener('click', () => {
+      console.log('00000000001:frontend')
       ws = new WebSocket('ws://localhost:8080')
       ws.onopen = () => {
         console.log('WebSocket ouvert')
@@ -34,24 +74,4 @@
 </body>
 
 </html>
-
-
-<!-- <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8" />
-    <meta
-      http-equiv="Content-Security-Policy"
-      content="default-src 'self'; script-src 'self'"
-    />
-    <meta
-      http-equiv="X-Content-Security-Policy"
-      content="default-src 'self'; script-src 'self'"
-    />
-    <title>Hello from Electron renderer!</title>
-  </head>
-  <body>
-    <h1>Hello from Electron renderer!</h1>
-    <p>👋</p>
-  </body>
-</html> -->
+ -->
